force-app/main/default/objects/CF_Application_Level_Access__c/CF_Application_Level_Access__c.object-meta.xml
<CustomObject>
    <description>Will link all related permission sets, groups, queues or other mechanisms that support the setup of a specific application/level combination.</description>
    <label>Application Level Access</label>
    <nameField>
        <label>Application Level Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Level Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>