force-app/main/default/objects/CF_Application_Level_Access__c/fields/Access_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Access_API_Name__c</fullName>
    <label>Access API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>