force-app/main/default/objects/CF_Application_Level_Access__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groups</fullName>
                <default>true</default>
                <label>Groups</label>
            </value>
            <value>
                <fullName>Permission Sets</fullName>
            </value>
            <value>
                <fullName>Queues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>