force-app/main/default/objects/CF_Application_Level_Access__c/fields/DTC_Application_Level__c.field-meta.xml
<CustomField>
    <fullName>DTC_Application_Level__c</fullName>
    <label>DTC Application Level</label>
    <referenceTo>DTC_Application_Level__c</referenceTo>
    <relationshipLabel>Application Level Access</relationshipLabel>
    <relationshipName>Application_Level_Access</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>